# my_rb1_robot

./: README.md
my_rb1_description/urdf/: my_rb1_robot.urdf
my_rb1_gazebo/: CMakeLists.txt
my_rb1_ros/: CMakeLists.txt  package.xml
my_rb1_ros/launch/: rotate_service.launch
my_rb1_ros/src/: rotate_service.py
